[gd_scene load_steps=7 format=3 uid="uid://ad5k43b7zpwq1"]

[ext_resource type="Script" uid="uid://ipwo87l6zkcml" path="res://commons/scenes/mapobjects/platform.gd" id="1_4xfn4"]
[ext_resource type="Shader" uid="uid://ffmobcumgppe0" path="res://commons/resourses/shaders/SimpleGrid.gdshader" id="2_rtdld"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nv4ip"]
size = Vector3(1, 0.102539, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_376e8"]
render_priority = 0
shader = ExtResource("2_rtdld")
shader_parameter/fill_color = Color(0.2, 0.3, 0.8, 0.7)
shader_parameter/wireframe_color = Color(0, 1, 1, 1)
shader_parameter/wireframe_width = 2.0
shader_parameter/wireframe_brightness = 2.0
shader_parameter/show_only_wireframe = false

[sub_resource type="BoxMesh" id="BoxMesh_35pab"]

[sub_resource type="BoxShape3D" id="BoxShape3D_go1ia"]

[node name="platform" type="Node3D"]
script = ExtResource("1_4xfn4")
lift_height = 2.0

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.496961, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00341797, 0)
shape = SubResource("BoxShape3D_nv4ip")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("ShaderMaterial_376e8")
mesh = SubResource("BoxMesh_35pab")

[node name="DetectionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.496961, 0)
collision_layer = 0
collision_mask = 524288

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.560966, 0)
shape = SubResource("BoxShape3D_go1ia")

[node name="Label3D" type="Label3D" parent="DetectionArea"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.496961, 0)
text = "sasas"
font_size = 16
outline_size = 3

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.125453, 0)
light_color = Color(1, 0.466667, 1, 1)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
